--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=Connectify
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=database
-spring.data.mongodb.username=root
-spring.data.mongodb.password=secret
+
+spring.datasource.url=jdbc:postgresql://localhost:8000/connectify
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 spring.ai.mistralai.api-key=zFJIsyZeZgOOBea1Ntmfp8vwPwkmfHdT
 spring.ai.mistralai.chat.options.model=mistral-small
 spring.ai.mistralai.chat.options.temperature=0.7
+
+jwt.key=TESTING
+jwt.access-token-expiration=3600000
+jwt.refresh-token-expiration=86400000
